--- a/.env
+++ b/.env
@@ -3,6 +3,11 @@ LLM_BASE_URL=http://localhost:9902/v1
 LLM_NAME=Qwen/Qwen3-30B-A3B
 LLM_API_KEY=EMPTY
 
+#OPENAI配置
+OPENAI_API_KEY=EMPTY
+OPENAI_API_BASE_URL=http://localhost:9902/v1
+DEFAULT_MODEL_TYPE=Qwen/Qwen3-30B-A3B
+
 # 多模态模型配置
 VLM_BASE_URL=http://localhost:9904/v1
 VLM_MODEL_NAME=OpenBMB/MiniCPM-V-4
