--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "camel-ai>=0.2.82",
+    "loguru>=0.7.3",
+    "pdf2image>=1.17.0",
+    "pymupdf>=1.26.7",
+    "python-docx>=1.2.0",
+    "python-dotenv>=1.0.0",
 ]
