--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ dependencies = [
     "camel-ai>=0.2.82",
     "loguru>=0.7.3",
     "pdf2image>=1.17.0",
+    "pymilvus>=2.6.6",
     "pymupdf>=1.26.7",
+    "pytest>=9.0.2",
     "python-docx>=1.2.0",
     "python-dotenv>=1.0.0",
+    "vllm>=0.13.0",
 ]
