finish Qwen3VL RAG, verify that Qwen3VL's greater performance and optimize the VLM response stage.

--- a/.env
+++ b/.env
@@ -54,3 +54,9 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=123456
 REDIS_DATABASE=0
+
+PYTHONPATH=.
+
+#Qwen3系列模型权重本地路径
+QWEN3_VL_EMBEDDING_PATH=/mnt/ssd2/steins/wenkai/models/Qwen3-VL-Embedding/models/Qwen3-VL-Embedding-8B
+QWEN3_VL_RERANKER_PATH=/mnt/ssd2/steins/wenkai/models/Qwen3-VL-Embedding/models/Qwen3-VL-Reranker-8B
